// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpToDateStatus component should render a initial state with a loader and a loader button 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="max-width: max-content;"
    >
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="max-width: max-content;"
    >
      <button
        class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiLoadingSpinner euiLoadingSpinner--medium euiButtonContent__spinner"
          />
          <span
            class="euiButton__text"
          >
            <span>
              Check updates
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`UpToDateStatus component should render the available updates status with a tooltip and a button to check updates without loaders 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="max-width: max-content;"
    >
      <div
        class="euiFlexGroup euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
          style="max-width: max-content;"
        >
          <div
            class="euiHealth euiHealth--textSizeS"
          >
            <div
              class="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <svg
                  aria-hidden="true"
                  class="euiIcon euiIcon--medium euiIcon--warning euiIcon-isLoading"
                  focusable="false"
                  height="16"
                  role="img"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
              <div
                class="euiFlexItem euiFlexItem--flexGrowZero"
              >
                <span>
                  Available updates
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="euiFlexItem euiFlexItem--flexGrowZero"
          style="max-width: max-content;"
        >
          <span
            class="euiToolTipAnchor"
          >
            <svg
              aria-hidden="true"
              aria-label="Info"
              class="euiIcon euiIcon--medium euiIcon--subdued euiIcon-isLoading eui-alignTop"
              focusable="true"
              height="16"
              role="img"
              tabindex="0"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            />
          </span>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="max-width: max-content;"
    >
      <button
        class="euiButton euiButton--primary euiButton--small"
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiButton__text"
          >
            <span>
              Check updates
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`UpToDateStatus component should retrieve available updates when click the button 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="max-width: max-content;"
    >
      <span
        class="euiLoadingSpinner euiLoadingSpinner--medium"
      />
    </div>
    <div
      class="euiFlexItem euiFlexItem--flexGrowZero"
      style="max-width: max-content;"
    >
      <button
        class="euiButton euiButton--primary euiButton--small euiButton-isDisabled"
        disabled=""
        type="button"
      >
        <span
          class="euiButtonContent euiButton__content"
        >
          <span
            class="euiLoadingSpinner euiLoadingSpinner--medium euiButtonContent__spinner"
          />
          <span
            class="euiButton__text"
          >
            <span>
              Check updates
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;
